--- a/posts/use-sw-effect.mdx
+++ b/posts/use-sw-effect.mdx
@@ -18,7 +18,7 @@ By default, the worker thread knows nothing about what's going on in the main th
 bridges that by providing regular updates based on `location` changes (`useLocation` hook). 
 
 ```tsx {{ filename:'root.tsx' }}
-import { useSWEffect } from '@remix-run/sw'
+import { useSWEffect } from '@remix-pwa/sw'
 
 export default function App() {
   useSWEffect();
