chore: new meta info

--- a/posts/contribute.mdx
+++ b/posts/contribute.mdx
@@ -1,6 +1,6 @@
 ---
 title: Contribute
-description: Learn how you can contribute to the Remix PWA Ecosystem.
+description: Learn how you can contribute to the Remix PWA Ecosystem. Thanks in advance for your help!
 shortTitle: Contribute
 section: Getting Started
 position: 3
