--- a/posts/default-fetch-handler.mdx
+++ b/posts/default-fetch-handler.mdx
@@ -1,6 +1,6 @@
 ---
 title: defaultFetchHandler
-description: Default handler for fetch requests in the worker
+description: Default handler for fetching requests in the worker. Fallback for all request not handled by route worker APIs.
 shortTitle: defaultFetchHandler
 section: "Routes & Worker API"
 position: 1
