--- a/posts/error-handler.mdx
+++ b/posts/error-handler.mdx
@@ -1,6 +1,6 @@
 ---
 title: errorHandler
-description: Error Handling in Remix PWA
+description: Error Handling in Remix PWA. Catch, handle and diagnose errors that occur in your service worker.
 shortTitle: errorHandler
 section: "Routes & Worker API"
 position: 2
