--- a/posts/get-load-context.mdx
+++ b/posts/get-load-context.mdx
@@ -1,6 +1,6 @@
 ---
 title: getLoadContext
-description: Global context object for the worker thread.
+description: Global context object for the worker thread. Share data globally between your workers in your routes and your service worker.
 shortTitle: getLoadContext
 section: "Routes & Worker API"
 position: 3
