--- a/posts/live-reload.mdx
+++ b/posts/live-reload.mdx
@@ -1,6 +1,6 @@
 ---
 title: LiveReload
-description: Remix PWA LiveReload Component
+description: Remix PWA LiveReload Component. Provide HMR and reloading support to the worker thread in Remix PWA.
 shortTitle: LiveReload
 section: 'Hooks & Components'
 position: 1
