--- a/posts/remix-pwa-runtime.mdx
+++ b/posts/remix-pwa-runtime.mdx
@@ -1,6 +1,6 @@
 ---
 title: '@remix-pwa/{runtime}'
-description: '@remix-pwa/{runtime}'
+description: Runtimes are the underlying Service Worker logic that Remix PWA uses to handle fetching, routing, caching, and more. This page contains all the official runtimes and community runtimes. 
 shortTitle: '@remix-pwa/{runtime}'
 section: Other API
 position: 2
@@ -30,7 +30,7 @@ None
 <Info>
 This section is still under construction. Creating your own runtime depends on some APIs that are still prone to breaking changes.
 
-If you want to create your own runtime, please refer to the source code of the [official runtime](https://github.com/remix-pwa/monorepo/blob/main/packages/worker-runtime/src/service-worker.internal.ts).
+If you want to create your own runtime, please refer to the source code of the [official runtime](https://github.com/remix-pwa/monorepo/blob/main/packages/worker-runtime/src).
 </Info>
 
 If you want to create your own runtime, it is made up of a few major components:
