--- a/posts/technical-explanantion.mdx
+++ b/posts/technical-explanantion.mdx
@@ -1,6 +1,6 @@
 ---
 title: Technical Explanantion
-description: An technical explanantion of Remix PWA v3.0 internals
+description: An technical explanantion of Remix PWA v3.0 internals. This is for you if you love to know how things work under the hood.
 shortTitle: Technical Explanantion
 section: Getting Started
 position: 7
