--- a/posts/type-script.mdx
+++ b/posts/type-script.mdx
@@ -1,6 +1,6 @@
 ---
 title: TypeScript Support
-description: Typescript and Remix PWA
+description: Typescript and Remix PWA. A match made in heaven. Check out our thoughts on TypeScript and our support for it in Remix PWA.
 shortTitle: TypeScript
 section: Guides
 position: 4
