--- a/posts/worker-loader.mdx
+++ b/posts/worker-loader.mdx
@@ -1,6 +1,6 @@
 ---
 title: workerLoader
-description: workerLoader
+description: Worker route API for handling GET requests in the worker thread. Bring the power of Service Workers directly to your Remix routes. 
 shortTitle: workerLoader
 section: "Routes & Worker API"
 position: 5
