chore: new posts

--- a/posts/precaching.mdx
+++ b/posts/precaching.mdx
@@ -3,7 +3,7 @@ title: Precaching
 description: Caching before you need it. Explore precaching and learn how to cache before your users even know they need it.
 shortTitle: Precaching
 section: Guides
-position: 3
+position: 4
 ---
 
 {/* Do not remove these lines! */}
@@ -72,7 +72,7 @@ information to precache on first render only.
 
 ### JiT Caching vs Precaching
 
-JiT (Just-in-Time) caching is a caching strategy where data is cached and retrieved dynamically as needed, rather than preloading and storing all possible data in advance.
+JiT (Just-in-Time) caching (or cache-as-needed) is a caching strategy where data is cached and retrieved dynamically as needed, rather than preloading and storing all possible data in advance.
 This is typically **after** the user has navigated to the page and the asset has been fetched by the network.
 
 Precaching is the process of caching (preloading) assets before they are needed. Hence, the fetching occurs only in the Service Worker and when the user navigates to the page, 
