--- a/posts/caching-strategies.mdx
+++ b/posts/caching-strategies.mdx
@@ -12,7 +12,7 @@ import Editor from './editor.tsx'
 import Snippet from './snippet.tsx'
 import Info from './info.tsx'
 
-If you've been a user of Remix PWA, you'll know that stratgies are not a new thing. It's something Workbox does too, and is a common
+If you've been a user of Remix PWA, you'll know that strategies are not a new thing. It's something Workbox does too, and is a common
 approach for caching in web applications for a while even though some don't even know they are ustilizing a strategy. Remix PWA does 
 nothing exactly new, but we did add some sugar to make it easier to use.
 
