fix v2 route convention link to manifest

--- a/posts/pwa/quickstart.mdx
+++ b/posts/pwa/quickstart.mdx
@@ -52,7 +52,7 @@ It's also not difficult to solve, add the right above Remix `<Links>` component 
 
 ```html 
 <!-- Notice I used Remix `v2_routeConvention`, change if not using -->
-<link rel="manifest" href="/resources.manifest.webmanifest" />
+<link rel="manifest" href="/resources/manifest.webmanifest" />
 ```
 
 And we have a good-to-go PWA set up! Check out the rest of the docs to explore the endless possibilities!
