new snippets + docs

--- a/posts/main/_index.mdx
+++ b/posts/main/_index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Quick Start
-description: Get started with Journal Stack (Lorem Edition)
+title: Welcome to Remix PWA
+description: This doc covers the basics of Remix PWA v4 plus a few resources to kickstart your journey!
 hidden: true
 toc: false
 ---
