--- a/posts/main/started/changelog.mdx
+++ b/posts/main/started/changelog.mdx
@@ -1,6 +1,6 @@
 ---
 title: Changelog
-description: ""
+description: "Stay up-to-date with the latest changes, enhancements, bug fixes and the behind-the-scenes progress and improvements in Remix PWA with the changelog."
 alternateTitle: Changelog
 order: 5
 ---
