--- a/posts/main/started/community.mdx
+++ b/posts/main/started/community.mdx
@@ -1,7 +1,15 @@
 ---
 title: Community
-description: ""
+description: "At the core of Remix PWA lies a passionate community of developers dedicated to open-source collaboration, knowledge-sharing, and driving the evolution of PWA technologies."
 alternateTitle: Community
 order: 3
+toc: false
 ---
 
+The Remix PWA community isn't a separate community, but one embedded into the Remix community.
+A community that's all about devs hanging out and having fun while building cool stuff for the web.
+
+To that end, please keep in my our [Code of Conduct](https://github.com/remix-pwa/monorepo/blob/dev/CODE_OF_CONDUCT.md).
+
+- [Discord](https://rmx.as/discord) - The Remix Discord server is just the right place to ask and answer questions, have conversations and share your work with the community.
+- [Github Discussions](https://github.com/orgs/remix-pwa/discussions) - This is the best place to propose changes to Remix PWA. Encourages open end conversations anyone can weigh in on.
