--- a/posts/main/started/technical-explanation.mdx
+++ b/posts/main/started/technical-explanation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Technical Explanation
-description: ""
+description: "Uncover the technical details and rationale behind Remix PWA's implementation, empowering you to leverage its full potential."
 alternateTitle: Technical Explanation
 order: 4
 ---
